namespace java com.rouesnel.parquetmr.bug

struct TestStruct {
    1: binary binaryField;
    2: string stringField;
    3: string binaryAsStringField;
}